# iLikey-Audio

./: .gitignore  PLAN.md  README.md  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/fastapi/: .env.example  package.json  requirements.txt
backend/fastapi/app/: database.py  main.py  models.py  schemas.py
backend/fastapi/app/routers/: auth.py  sections.py  songs.py  tags.py
backend/firebase/: firebase-config.example.ts  firestore.indexes.json  firestore.rules  package.json
core/: package.json  tsconfig.json
core/src/: auth.ts  index.ts  media.ts  models.ts  spotify.ts  storage-local.ts  storage.ts  suno.ts
core/src/__tests__/: auth.test.ts  media.test.ts  models.test.ts  storage-local.test.ts  tagging-latency.test.ts
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
swift/: README.swift.md
swift/iLikeyAudio-App/iLikeyAudio-App/: ContentView.swift  iLikeyAudio_AppApp.swift
swift/iLikeyAudio-App/iLikeyAudio-App.xcodeproj/: project.pbxproj
swift/iLikeyAudio-App/iLikeyAudio-AppTests/: iLikeyAudio_AppTests.swift
swift/iLikeyAudio-App/iLikeyAudio-AppUITests/: iLikeyAudio_AppUITests.swift  iLikeyAudio_AppUITestsLaunchTests.swift
web/: index.html  package.json  tsconfig.json
web/src/: main.tsx
web/src/components/: Layout.tsx
web/src/context/: AppContext.tsx
web/src/lib/: utils.ts
web/src/pages/: AudioTest.tsx  Generate.tsx  Library.tsx  NowPlaying.tsx  Settings.tsx  SongDetail.tsx
(+2 files in other folders)
